[project]
name = "financeagent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==1.5.0",
    "aiofiles>=24.1.0",
    "chromadb>=1.0.20",
    "openai>=1.101.0",
    "openbb>=4.1.3",
    "sqlalchemy>=2.0.43",
    "yahoofinance>=0.0.2",
    "yfinance>=0.2.65",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "docstring-parser>=0.15.0",
    "gitpython>=3.1.0",
    "pydantic-settings>=2.0.0",
    "tomli>=2.0.0",
]
